--- a/ansible.cfg
+++ b/ansible.cfg
@@ -494,3 +494,9 @@
 
 # Set how many context lines to show in diff
 # context = 3
+
+[defaults]
+configured module search path = [u'/home/mtkunke/.ansible/plugins/modules', u'/usr/share/ansible/plugins/modules']
+ansible python module location = /home/mtkunke/ansible26/lib/python2.7/site-packages/ansible
+executable location = /home/mtkunke/ansible26/bin/ansible
+python version = 2.7.15 (default, May 16 2018, 17:50:09) [GCC 8.1.1 20180502 (Red Hat 8.1.1-1)]
